--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
                   <a href="https://www.facebook.com/paramaribo23/" class="social-link"><img src="img/social/facebook.svg" alt="facebook"></a>
                </div>
                <a href="#" class="contacts-policy">Политика конфиденциальности</a>
+               <p>интеграция в vscode</p>
             </div>
             <!-- /.contacts-text -->
          </div>
