--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
                            <img src="img/projects/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
                            <div class="project-description">
                               <h3 class="project-subtitle">Отзыв клиента</h3>
-                              <p class="project-paragraph">Мне понравилось работать с Артемом, потому что он все время был на связи и предлагал свои решения, когда мы заходили в тупик с дизайном. Мне нужны были закрывающие документы для бухгалтерии, и Артем — тот редкий фрилансер,
-                                 у которого с документами все в порядке</p>
+                              <p class="project-paragraph">Мне понравилось работать с Лилей, потому что она все время была на связи и предлагала свои решения, когда мы заходили в тупик с дизайном.</p>
                            </div>
                         </div>
                      </div>
@@ -143,8 +142,7 @@
                            <img src="img/projects/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
                            <div class="project-description">
                               <h3 class="project-subtitle">Отзыв клиента</h3>
-                              <p class="project-paragraph">Мне понравилось работать с Артемом, потому что он все время был на связи и предлагал свои решения, когда мы заходили в тупик с дизайном. Мне нужны были закрывающие документы для бухгалтерии, и Артем — тот редкий фрилансер,
-                                 у которого с документами все в порядке</p>
+                              <p class="project-paragraph">Всё отлично)</p>
                            </div>
                         </div>
                      </div>
@@ -172,8 +170,7 @@
                            <img src="img/projects/feedback-icon.svg" alt="Отзыв клиента" class="project-icon">
                            <div class="project-description">
                               <h3 class="project-subtitle">Отзыв клиента</h3>
-                              <p class="project-paragraph">Мне понравилось работать с Артемом, потому что он все время был на связи и предлагал свои решения, когда мы заходили в тупик с дизайном. Мне нужны были закрывающие документы для бухгалтерии, и Артем — тот редкий фрилансер,
-                                 у которого с документами все в порядке</p>
+                              <p class="project-paragraph">Будем и дальше работать вместе.</p>
                            </div>
                         </div>
                      </div>
