--- a/index.html
+++ b/index.html
@@ -210,18 +210,18 @@
                   <!-- /.contacts-mail -->
                   <div class="contacts-social">
                      <h4 class="contacts-title">Соцсети</h4>
-                     <a href="#" class="contacts-link">t.me/paramaribo23</a>
-                     <a href="#" class="contacts-link">vk.me/paramaribo23</a>
-                     <a href="#" class="contacts-link">fb.me/paramaribo23</a>
+                     <a href="#" class="contacts-link">t.me/paramaribo35</a>
+                     <a href="#" class="contacts-link">vk.me/paramaribo35</a>
+                     <a href="#" class="contacts-link">fb.me/paramaribo35</a>
                   </div>
                   <!-- /.contacts-social -->
                </div>
                <!-- /.contacts-data -->
                <div class="social-links">
-                  <a href="https://github.com/paramaribo35/" class="social-link"><img src="img/social/github.svg" alt="github"></a>
-                  <a href="https://twitter.com/paramaribo35/" class="social-link"><img src="img/social/twitter.svg" alt="twitter"></a>
-                  <a href="https://www.instagram.com/paramaribo35/" class="social-link"><img src="img/social/instagram.svg" alt="instagram"></a>
-                  <a href="https://www.facebook.com/paramaribo35/" class="social-link"><img src="img/social/facebook.svg" alt="facebook"></a>
+                  <a href="https://github.com" class="social-link"><img src="img/social/github.svg" alt="github"></a>
+                  <a href="https://twitter.com" class="social-link"><img src="img/social/twitter.svg" alt="twitter"></a>
+                  <a href="https://www.instagram.com" class="social-link"><img src="img/social/instagram.svg" alt="instagram"></a>
+                  <a href="https://www.facebook.com" class="social-link"><img src="img/social/facebook.svg" alt="facebook"></a>
                </div>
                <a href="#" class="contacts-policy">Политика конфиденциальности</a>
             </div>
